--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
       "react-app/jest"
     ]
   },
-  "proxy":"http://fastapi-service:8000",
+  "proxy":"http://backend:8000",
   "browserslist": {
     "production": [
       ">0.2%",
